--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
     -docker build -t arnas69/reacto-test -f ./client/Dockerfile.dev
 
 script:
-    - docker run -e CI=true USERNAME/react-test npm test
+    - docker run -e CI=true arnas69/reacto-test npm test
 
 after_success:
     - docker build -t arnas69/multi-client ./client
