--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
     - docker
 
 before_install:
-    -docker build -t arnas69/reacto-test -f ./client/Dockerfile.dev
+    -docker build -t arnas69/reacto-test -f ./client/Dockerfile.dev ./client
 
 script:
     - docker run -e CI=true arnas69/reacto-test npm test
